tests/ui/consts/control-flow/drop-fail.precise.stderr
error[E0493]: destructor of `Option<Vec<i32>>` cannot be evaluated at compile-time
  --> $DIR/drop-fail.rs:9:9
   |
LL |     let x = Some(Vec::new());
   |         ^ the destructor for this type cannot be evaluated in constants
...
LL | };
   | - value is dropped here

error[E0493]: destructor of `Option<Vec<i32>>` cannot be evaluated at compile-time
  --> $DIR/drop-fail.rs:40:9
   |
LL |     let mut tmp = None;
   |         ^^^^^^^ the destructor for this type cannot be evaluated in constants
...
LL | };
   | - value is dropped here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0493`.
